# Copyright (C) 2006-2015,2018,2024,2025 Bernd Feige
# This file is part of avg_q and released under the GPL v3 (see avg_q/COPYING).

PROJECT(avg_q_ui LANGUAGES C)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk4)

ADD_DEFINITIONS(${GTK_CFLAGS} -DGTK_DISABLE_SINGLE_INCLUDES -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE)

if (WITH_POSPLOT)
ADD_LIBRARY(vogl_vgui STATIC vogl_vgui_driver.c)
endif (WITH_POSPLOT)

ADD_EXECUTABLE(avg_q_ui avg_q_ui.c)
TARGET_LINK_LIBRARIES(avg_q_ui PRIVATE ${BF_LIBS_VGUI} PkgConfig::GTK)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_dump.h)
 ADD_EXECUTABLE(avg_q_ui1 avg_q_ui.c avg_q_dump.h)
 SET_TARGET_PROPERTIES(avg_q_ui1 PROPERTIES 
  COMPILE_FLAGS "-DSTANDALONE"
 )
 TARGET_LINK_LIBRARIES(avg_q_ui1 PRIVATE ${BF_LIBS_VGUI} PkgConfig::GTK)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_dump.h)

IF(CMAKE_SYSTEM_NAME STREQUAL Windows)
 ADD_CUSTOM_COMMAND(
  TARGET avg_q_ui
  PRE_LINK
  COMMAND ${CMAKE_RC_COMPILER} ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_ui.rc ${CMAKE_CURRENT_BINARY_DIR}/avg_q_rc.o
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 SET_TARGET_PROPERTIES(avg_q_ui
  PROPERTIES LINK_FLAGS "-mwindows ${CMAKE_CURRENT_BINARY_DIR}/avg_q_rc.o"
 )
 IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_dump.h)
  ADD_CUSTOM_COMMAND(
   TARGET avg_q_ui1
   PRE_LINK
   COMMAND ${CMAKE_RC_COMPILER} ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_ui.rc ${CMAKE_CURRENT_BINARY_DIR}/avg_q_rc.o
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  )
  SET_TARGET_PROPERTIES(avg_q_ui1
   PROPERTIES LINK_FLAGS "-mwindows ${CMAKE_CURRENT_BINARY_DIR}/avg_q_rc.o"
  )
 ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/avg_q_dump.h)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL Windows)

INSTALL(
 TARGETS avg_q_ui
 DESTINATION ${INSTALLDIR}
 PERMISSIONS ${EXECUTABLE_PERMISSIONS}
)
IF(CMAKE_SYSTEM_NAME STREQUAL Windows)
INSTALL(
 FILES avg_q_assoc.bat
 DESTINATION ${INSTALLDIR}
 PERMISSIONS ${FILE_PERMISSIONS}
)
ELSE(CMAKE_SYSTEM_NAME STREQUAL Windows)
INSTALL(
 FILES ../Desktop/avg_q.desktop ../Desktop/avg_q-show_any.xml avg_q.png
 DESTINATION ${INSTALLDIR}
 PERMISSIONS ${FILE_PERMISSIONS}
)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL Windows)
